--- a/styles.css
+++ b/styles.css
@@ -46,44 +46,28 @@ nav a:hover {
     font-size: 2em;
 }
 
-.articles article {
+.articles  {
     width: 30%;
-    float: left;
 }
 
-
-.articles {
-    clear: both;
-    float: left;
-    display: block;
-    position: relative;
+article {
+    padding: 10%;
+    background: #beabab;
+    border: #4a3f3f solid 2px;
 }
 
 .cons_serv img {
-    float: left;
     padding-right: 50px;
-}
-
-.our_clients {
-    clear: both;
-    float: left;
-    display: block;
-    position: relative;
 }
 
 footer {
     background-color: #4a3f3f;
     color: #fff;
-    clear: both;
-    float: left;
-    display: block;
-    position: relative;
     width: 100%;
 }
 
 footer .form_contact {
     width: 50%;
-    float: left;
 }
 
 .form_contact input {
@@ -94,5 +78,4 @@ footer .form_contact {
 
 footer .form_address {
     width: 50%;
-    float: left;
 }
